package domain.business.FuentesDeDatos;
import domain.business.incidencias.Hecho;

public class FuenteDinamica implements FuenteDeDatos{

  //private String nombre;
  //private List<Hecho> hechos;
  //public method agregarHecho(){}
}
