package domain.business.Usuarios;

public enum Rol {
  VISUALIZADOR,
  CONTRIBUYENTE,
  ADMINISTRADOR,
}
